[package]
name = "demo"
version = "0.1.1"
edition = "2018"
authors = ["PangWei <wei@arcblock.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ArcBlock/rust-sdk-example"
repository = "https://github.com/ArcBlock/rust-sdk-example"
documentation = "https://docs.rs/forge-rust-sdk"
description = "The rust language implementation of crypter"
keywords = ["forge", "crypter"]


[dependencies]
forge_wallet = "0.1.1"
forge_grpc = "0.1.1"
# forge_sdk = "0.1.1"
